--- a/index.html
+++ b/index.html
@@ -5,132 +5,118 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home.</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <title>logo</title>
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,200&family=Quicksand:wght@500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Dosis:wght@300&family=Indie+Flower&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
-        <div class="nav-bar-main-photo">
-            <div class="nav-bar-sub-main-photo">
-                <img src="logo-4.png" alt="logo">
-            </div>
+    <header class="nav-bar">
+
+        <div class="nav-bar-item">
+            <img src="imgs/default-logo.png" alt="logo">
         </div>
-        <div class="nav-bar-main">
-            <div class="nav-bar-sub-main">
-                <div>
-                    <a href="index.html">
-                        <button>home</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="gallery.html">
-                        <button>gallery</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="stories.html">
-                        <button>stories</button>
-                    </a>
-                </div>
-                <div>
-                    <a href="about.html">
-                        <button>about</button>
-                    </a>
-                </div>
-            </div>
+
+        <div class="nav-bar-item">
+            <p></p>
         </div>
-        <div class="line-divider-main">
-            <div class="line-divider">
-                <p>           </p>
-            </div>
-        </div>
+
     </header>
-    <section>
-        <div class="content-main">
-            <div class="content-sub-main">
-                <div class="box-1">
-                    <img src="8.JPG" alt="foto6">
-                </div>
-                <div class="box-2">
-                    <img src="6.JPG" alt="foto4">
-                </div>
-                <div class="box-3">
-                    <p><span>Děkujeme za návštěvu,</span>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
+    <section class="main-content">
+        <div class="sub-main-content">
+            <div class="sub-main-item">
+                <p>
+                    WE CREATE BRANDS THE WORLD LOVES
+                </p>
+            </div>
+            <div class="sub-main-item">
+                <p>
+                    About Design Studio
+                </p>
+            </div>
+            <div class="sub-main-item">
+                <p>
+                    Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elitsapien. Quisque fringilla sit amet
+                    dolor commodo efficitur. Aliquam et sem odio. In ullam corper nisi
+                    nunc, et molestie ipsum iaculis sit ame
+                </p>
+            </div>
+            <div class="button">
 
-                <div class="box-4">
-                    <img src="5.JPG" alt="foto3">
-                </div>
-
-                <div class="box-5">
-                    <img src="3.JPG" alt="foto2">
-                </div>
-                <!--
-                <div class="box-5">
-                    <img src="17.jpg" alt="foto9">
-                </div>
-                <div class="box-6">
-                    <img src="10.JPG" alt="foto8">
-                </div> 
-                <div class="box-7">
-                    <img src="2.jpg" alt="foto1">
-                </div>
-                <div class="box-8">
-                    <img src="7.jpg" alt="foto5">
-                </div>
-                <div class="box-9">
-                    <img src="9.JPG" alt="foto7">
-                </div>
-                <div class="box-10">
-                    <img src="13.jpg" alt="foto10">
-                </div> -->
+                <a
+                    href="https://nicepage.com/website-templates/preview/custom-web-based-solutions-117537?device=desktop"><button>
+                        LEARN MORE
+                    </button></a>
             </div>
         </div>
+        <div class="grid">
+            <div class="sub-grid">
+                <div class="A">
+                    <img src="imgs/bag.svg" alt="bag">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+                <div class="B">
+                    <img src="imgs/rocket.svg" alt="rocket">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+                <div class="C">
+                    <img src="imgs/palette.svg" alt="palette">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+                <div class="D">
+                    <img src="imgs/megaphone.svg" alt="megaphone">
+                    <h1>Sample Headline</h1>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </section>
-    <footer>
-        <div class="footer-main">
-            <div class="footer-sub-main">
-                <p>Web - David Pitra 2022</p>
-            </div>
-        </div>
-    </footer>
+
 </body>
 
 </html>
