--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 </head>
 
 <body>
-
     <header class="nav-bar">
 
         <div class="nav-bar-item">
@@ -87,35 +86,50 @@
             </div>
         </div>
         <div class="grid">
-            <div class="sub-grid">
-                <div class="A">
-                    <img src="imgs/bag.svg" alt="bag">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
-                </div>
-                <div class="B">
-                    <img src="imgs/rocket.svg" alt="rocket">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
-                </div>
-                <div class="C">
-                    <img src="imgs/palette.svg" alt="palette">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
-                </div>
-                <div class="D">
-                    <img src="imgs/megaphone.svg" alt="megaphone">
-                    <h1>Sample Headline</h1>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
-                    </p>
+            <div id="3">
+                <div class="sub-grid">
+                    <div class="A">
+                        <img src="imgs/bag.svg" alt="bag">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                        </p>
+                    </div>
+                    <div class="B">
+                        <img src="imgs/rocket.svg" alt="rocket">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                        </p>
+                    </div>
+                    <div class="C">
+                        <img src="imgs/palette.svg" alt="palette">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                        </p>
+                    </div>
+                    <div class="D">
+                        <img src="imgs/megaphone.svg" alt="megaphone">
+                        <h1>Sample Headline</h1>
+                        <p>Sample text. Click to select the text box. Click again or double click to start editing the text.
+                        </p>
+                    </div>
                 </div>
             </div>
+            
         </div>
 
     </section>
+    <footer class="footer-main">
+        <div class="sub-footer-main">
+            <div class="footer-item">
+                <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+            </div>
+            <div class="footer-item">
+                <p>
+                    <span>Website Templates</span> created with <span>Website Builder Software</span>
+                </p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
