--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
 </head>
@@ -46,7 +46,7 @@ Struktura složky projektu:
 
 <body>
     <header>
-        <img class="helo" src="images/logo.png" alt="logo">
+        <!-- <img class="helo" src="images/logo.png" alt="logo"> -->
         <nav class="nav-bar-container">
             <div class="nav-bar-sub-container">
                 <div class="nav-icon">
@@ -55,9 +55,9 @@ Struktura složky projektu:
                 <div class="nav-button">
                     <!-- <a href="" target="_blank" class="line-container"> </a> -->
                     <div class="line-container">
-                        <div class="one"></div>
-                        <div class="two"></div>
-                        <div class="three"></div>
+                        <div class="one"><button>DOVOLENÁ</button></div>
+                        <div class="two"><button>PRAKTICKÉ INFORMACE</button></div>
+                        <div class="three"><button>KONTAKT</button></div>
                     </div>
                 </div>
             </div>
@@ -65,74 +65,79 @@ Struktura složky projektu:
     </header>
     <section>
         <div class="content-container">
-            <div class="welcome-banner">
-                <div>
-                    <h1>
-                        DOVOLENÁ S NÁMI
-                    </h1>
-                </div>
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
-                        lacinia. Sed convallis magna eu sem.
-                    </p>
-                </div>
-                <div>
-                    <button>CHCI S VÁMI!</button>
+            <div class="welcome-banner-container">
+                <div class="welcome-banner">
+                    <div>
+                        <h1>
+                            DOVOLENÁ S NÁMI
+                        </h1>
+                    </div>
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo
+                            accumsan
+                            lacinia. Sed convallis magna eu sem.
+                        </p>
+                    </div>
+                    <div>
+                        <button>CHCI S VÁMI!</button>
+                    </div>
                 </div>
             </div>
             <div class="offers-section">
                 <div class="offers-section-heading">
                     <p>PROZKOUMEJTE KRÁSY EVROPSKÝCH OSTROVŮ</p>
                 </div>
-                <div class="offer-section-1">
-                    <div>
-                        <img src="images/offer1.jpg" alt="offer1">
-                    </div>
-                    <div class="sub-offer-section-1">
+                <div class="offer-sections-container">
+                    <div class="offer-section-1">
                         <div>
-                            <h3>ATLANTICKÉ OSTROVY</h3>
+                            <img src="images/offer1.png" alt="offer1">
                         </div>
-                        <div>
-                            <p>
-                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                iaculis
-                                gravida nulla.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="offer-section-2">
-                    <div>
-                        <img src="images/offer2.jpg" alt="offer2">
-                    </div>
-                    <div class="sub-offer-section-2">
-                        <div>
-                            <h3>ZÁPADNÍ STŘEDOMOŘÍ</h3>
-                        </div>
-                        <div>
-                            <p>
-                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                iaculis
-                                gravida nulla.
-                            </p>
+                        <div class="sub-offer-section-1">
+                            <div>
+                                <h3>ATLANTICKÉ OSTROVY</h3>
+                            </div>
+                            <div>
+                                <p>
+                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                    iaculis
+                                    gravida nulla.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="offer-section-3">
-                    <div>
-                        <img src="images/offer3.jpg" alt="offer3">
-                    </div>
-                    <div class="sub-offer-section-3">
+                    <div class="offer-section-2">
                         <div>
-                            <h3>VÝCHODNÍ STŘEDOMOŘÍ</h3>
+                            <img src="images/offer2.png" alt="offer2">
                         </div>
+                        <div class="sub-offer-section-2">
+                            <div>
+                                <h3>ZÁPADNÍ STŘEDOMOŘÍ</h3>
+                            </div>
+                            <div>
+                                <p>
+                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                    iaculis
+                                    gravida nulla.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer-section-3">
                         <div>
-                            <p>
-                                Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                iaculis
-                                gravida nulla.
-                            </p>
+                            <img src="images/offer3.png" alt="offer3">
+                        </div>
+                        <div class="sub-offer-section-3">
+                            <div>
+                                <h3>VÝCHODNÍ STŘEDOMOŘÍ</h3>
+                            </div>
+                            <div>
+                                <p>
+                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
+                                    iaculis
+                                    gravida nulla.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -145,19 +150,17 @@ Struktura složky projektu:
         </div>
     </section>
     <footer>
-        <div class="footer-container">
-            <div class="footer-information">
-                <div>
-                    OBCHODNÍ PODMÍNKY
-                </div>
-                <div>
-                    OCHRANA OSOBNÍCH ÚDAJŮ
-                </div>
+
+        <div class="footer-information">
+            <div>
+                OBCHODNÍ PODMÍNKY
+            </div>
+            <div>
+                OCHRANA OSOBNÍCH ÚDAJŮ
             </div>
         </div>
+
     </footer>
-
-
 </body>
 
 </html>
