--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="contact-content-container">
                 <div class="contact-content-sub-container">
                     <div class="contact-content-heading">
-                        <h1>KONTAKT</h1>
+                        <h1>KONTAKT -- DOŘEŠIT GRID A TLAČITKO HO POSOUVAJICI, CHYBÍ RESPON</h1>
                     </div>
                     <div class="contact-content-sub-sub-container">
                         <div class="contact-content-sub-item">
