--- a/information.html
+++ b/information.html
@@ -34,6 +34,13 @@
                         <div class="three"></div>
                     </div>
                 </div>
+                <div class="button-container">
+                    <div class="buttons">
+                        <a href="index.html"><button>DOVOLENÁ</button></a>
+                        <a href="information.html"> <button>PRAKTICKÉ INFORMACE</button></a>
+                        <a href="contact.html"><button>KONTAKT</button></a>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
