--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -156,18 +157,18 @@ Struktura složky projektu:
             </div>
         </div>
     </section>
-    <footer>
+        <footer>
 
-        <div class="footer-information">
-            <div>
-                OBCHODNÍ PODMÍNKY
+            <div class="footer-information">
+                <div>
+                    OBCHODNÍ PODMÍNKY
+                </div>
+                <div>
+                    OCHRANA OSOBNÍCH ÚDAJŮ
+                </div>
             </div>
-            <div>
-                OCHRANA OSOBNÍCH ÚDAJŮ
-            </div>
-        </div>
 
-    </footer>
+        </footer>
 </body>
 
 </html>
