--- a/index.html
+++ b/index.html
@@ -1,174 +1,86 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <link rel="icon" href="images/logo.png">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
+    <title>document</title>
 </head>
-<!--Náležitosti:
-    styly budou zapsané v SCSS
-        použijte moduly
-        nesting
-        proměnné
-        mixins (stačí alespoň jednu)
-    třídy v HTML (SCSS)
-        zapsané v AJ
-        snažte se názvy psát smysluplně k významu třídy
-        použije kebab-case - https://www.theserverside.com/definition/Kebab-case
-    pro názvy souborů nepoužívejte české názvy ani diakritiku
-    plně responzivní
-    doporučuji využít mobile-first
-        první vytvoření verze pro mobily
-        poté optimalizace pro větší zařízení
-Struktura složky projektu:
-    index.html
-    styles
-        _header.scss
-        _global.scss
-        styles.scss
-    images
-        img.svg
-        img.png
-    fonts - pouze v případě, že  budete stahovat fonty -->
 
 <body>
     <header>
-        <!-- <img class="helo" src="images/logo.png" alt="logo"> -->
-        <nav class="nav-bar-container">
-            <div class="nav-bar-sub-container">
-                <div class="nav-icon">
-                    <img src="images/logo.png" alt="logo">
-                </div>
-                <div class="nav-button">
-                    <!-- <a href="" target="_blank" class="line-container"> </a> -->
-                    <div class="line-container">
-                        <div class="one"></div>
-                        <div class="two"></div>
-                        <div class="three"></div>
-                    </div>
-                </div>
-                <div class="buttons-container">
-                    <div class="buttons">
-                        <a href="index.html"><button>DOVOLENÁ</button></a>
-                        <a href="information.html"><button>PRAKTICKÉ INFORMACE</button></a>
-                        <a href="contact.html"><button>KONTAKT</button></a>
-                    </div>
+        <nav>
+            <div class="navbar-main-logo">
+                <img src="" alt="">
+            </div>
+            <div class="navbar-main-button">
+                <div class="button-container">
+                    <ul>
+                        <li><a href="index.html">homepage</a></li>
+                        <li><a href="about.html">about</a></li>
+                    </ul>
+
+                    <nav class="navbar sticky-top navbar-light bg-light">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#">Sticky top</a>
+                        </div>
+                    </nav>
+
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <div class="container-fluid">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                           
+                            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="#">home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="#">about</a>
+                                    </li>
+
+                            </div>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </nav>
     </header>
-    <section>
-        <div class="content-container">
-            <div class="welcome-banner-container">
-                <div class="welcome-banner">
-                    <div>
-                        <h1>
-                            DOVOLENÁ S NÁMI
-                        </h1>
-                    </div>
-                    <div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo
-                            accumsan
-                            lacinia. Sed convallis magna eu sem.
-                        </p>
-                    </div>
-                    <div>
-                        <button>CHCI S VÁMI!</button>
-                    </div>
-                </div>
-            </div>
-            <div class="offers-section">
-                <div class="offers-section-heading">
-                    <p>PROZKOUMEJTE KRÁSY EVROPSKÝCH OSTROVŮ</p>
-                </div>
-                <div class="offer-sections-container">
-                    <div class="offer-section-1">
-                        <div>
-                            <img src="images/offer1.png" alt="offer1">
-                        </div>
-                        <div class="sub-offer-section-1">
-                            <div>
-                                <h3>ATLANTICKÉ OSTROVY</h3>
-                            </div>
-                            <div>
-                                <p>
-                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                    iaculis
-                                    gravida nulla.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="offer-section-2">
-                        <div>
-                            <img src="images/offer2.png" alt="offer2">
-                        </div>
-                        <div class="sub-offer-section-2">
-                            <div>
-                                <h3>ZÁPADNÍ STŘEDOMOŘÍ</h3>
-                            </div>
-                            <div>
-                                <p>
-                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                    iaculis
-                                    gravida nulla.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="offer-section-3">
-                        <div>
-                            <img src="images/offer3.png" alt="offer3">
-                        </div>
-                        <div class="sub-offer-section-3">
-                            <div>
-                                <h3>VÝCHODNÍ STŘEDOMOŘÍ</h3>
-                            </div>
-                            <div>
-                                <p>
-                                    Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec
-                                    iaculis
-                                    gravida nulla.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="registration-button">
-                <div>
-                    <button>CHCI S VÁMI!</button>
-                </div>
-            </div>
-        </div>
-    </section>
-        <footer>
+    <div class="action" onclick="actionToggle();">
+        <span>+</span>
+        <ul>
+          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111392.svg" alt="" width="25px">Share on Facebook</li>
+          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">Share on VK</li>
+          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on GitHub</li>
+          <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on Instagram</li>
+          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on Codepen</li>
+          <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on Linkedin</li>
+        </ul>
+      </div>
+      
 
-            <div class="footer-information">
-                <div>
-                    OBCHODNÍ PODMÍNKY
-                </div>
-                <div>
-                    OCHRANA OSOBNÍCH ÚDAJŮ
-                </div>
-            </div>
+    <!-- Optional JavaScript; choose one of the two! -->
 
-        </footer>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="./scripts/index.js"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
 </body>
 
 </html>
