--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </nav>
     </header>
     <section>
-      <main>
+      <main id="main">
         <div class="validator">
           <div class="sub-validator">
             <h4 id="validator">answer please</h4>
@@ -58,7 +58,7 @@
         </div>
       </div>
     </footer>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
     <!-- type="module" -->
     <!-- <script src="./methods.js"></script> -->
   </body>
